Main menu and options

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\GameBoard.cs" />
     <Compile Include="Assets\GameManager.cs" />
+    <Compile Include="Assets\MainMenu.cs" />
     <Compile Include="Assets\Modifier.cs" />
     <Compile Include="Assets\Player.cs" />
     <Compile Include="Assets\Tile.cs" />
